--- a/env/php.env
+++ b/env/php.env
@@ -4,6 +4,7 @@ APP_KEY="${APP_KEY}"
 APP_DEBUG="${APP_DEBUG}"
 APP_URL="${APP_URL}"
 APP_TIMEZONE="${APP_TIMEZONE}"
+APP_LOCALE="${APP_LOCALE}"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
